# Captionwave

./: .gitignore  LICENSE  README.md  core.py  montaje_ffmpeg.py  pyproject.toml  tts.py
.github/workflows/: ci.yml  publish.yml
examples/: README.md  basico.py  emojis_a_color_mp4.py  offline_sin_internet.py  texto_a_mp4.py
src/captionwave/: __init__.py  ass_writer.py  core.py  emojis.py  srt_writer.py  styles.py  tts.py
tests/: test_core.py  test_emojis.py  test_styles.py  test_tts.py  test_writers.py
