[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "captionwave"
version = "0.1.0"
description = "Genera audio + subtítulos animados sincronizados (.ass/.srt) a partir de texto, con emojis compatibles con iOS."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Wilfredo Guillén", email = "wilfredoguillensalazar@gmail.com" }]
keywords = ["subtitles", "captions", "tts", "ass", "shorts", "reels", "tiktok", "karaoke", "emoji"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "edge-tts>=6.1",
    "emoji>=2.8",
]

[project.optional-dependencies]
# Mejora la precisión de la duración del audio (recomendado).
duration = ["mutagen>=1.45"]
# Para los ejemplos que montan el video.
video = ["moviepy>=2.0"]
# Para ejecutar la batería de tests (offline).
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/Fortex-GT/Captionwave"
Repository = "https://github.com/Fortex-GT/Captionwave"
Issues = "https://github.com/Fortex-GT/Captionwave/issues"

[tool.setuptools.packages.find]
where = ["src"]
